[metadata]
name = cldfofflinebrowser
version = 0.2.1.dev0
author='Robert Forkel and Hans-Jörg Bibiko
author_email = dlce.rdm@eva.mpg.de
description = A cldfbench plugin to create offline broweable CLDF datasets
keyword =
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/cldf/cldfofflinebrowser
project_urls =
    Bug Tracker = https://github.com/cldf/cldfofflinebrowser/issues
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    rfc3986
    cldfbench
    tqdm
    jinja2
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
cldfofflinebrowser =
    templates/*
    static/*

[options.entry_points]
cldfbench.commands =
    offline = cldfofflinebrowser.commands

[options.extras_require]
dev =
    tox
    flake8
    wheel>=0.36
    build
    twine
test =
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,W503
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    cldfofflinebrowser
    tests

[coverage:report]
show_missing = true

[tox:tox]
envlist = py37, py38, py39, py310, py311
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
